force-app/main/default/objects/Class_Instructor__c/Class_Instructor__c.object-meta.xml
<CustomObject>
    <label>Class Instructor</label>
    <nameField>
        <displayFormat>CI - {00000000}</displayFormat>
        <label>CI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>