force-app/main/default/objects/Class_Instructor__c/fields/Class_Taught__c.field-meta.xml
<CustomField>
    <fullName>Class_Taught__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Taught</label>
    <referenceTo>Free_Class__c</referenceTo>
    <relationshipLabel>Class Instructors</relationshipLabel>
    <relationshipName>Class_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>