force-app/main/default/objects/Class_Instructor__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>TEXT( Class_Taught__r.Course_Name__c )</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>