force-app/main/default/objects/Class_Instructor__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Instructors</relationshipLabel>
    <relationshipName>Class_Instructors</relationshipName>
    <type>Lookup</type>
</CustomField>